# orbital-phycom

./: .gitignore  CLAUDE.md  README.md  Sim.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Thermopylae/: Thermopylae-cascade.json  Thermopylae-platform.json  Thermopylae-sim.json  Thermopylae-swarm.json  bootstrap-economics.json  orbital-evolution.json  space-data-center.md  thermal-comms.json  thermal-phase.json
ai/: README.md  __init__.py  navigation.json  safety_boundaries.md
ai/training/: README.md  __init__.py  codebase_map.py  exercises.json  (+1 more)
atmospheric/: __init__.py  ground_calibration.py  thermal_dynamics.py
core/: Fixes.md  __init__.py  celestrak.py  debris-tracker.py  debris_tracker.py  detection.py  drag-force.py  drag_force.py  enhanced_recovery.py  noise_model.py  orbital_dynamics.py  physics_constants.py  seed_expander.py  seed_recovery.py
docs/: QUICKSTART.md
fieldlink/: README.md  __init__.py  infrastructure_assistance.fieldlink.json  nexus_emergency_management.fieldlink.json
nutrient_cycling/: __init__.py  local_capacity.py  narrative_detector.py  nitrogen_fixation.py  nutrient_constants.py  phosphorus_recovery.py  potassium_cycling.py  soil_biology.py
robotics/: __init__.py  joint_visualization.py  synovial_joint.py
simulations/: 01_basic_orbital_sim.py  02_three_satellite_demo.py  03_full_pipeline_demo.py  04_ground_atmospheric_coupling.py  05_recovery_comparison.py  __init__.py
tests/: test_detection_and_physics.py  test_noise_and_recovery.py  test_orbital_dynamics.py  test_seed_expander.py
(+7 files in other folders)
